@@ -1,0 +1,23 @@
+# See the description in tests/features/OTCmd2-chart.txt
+# These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
+# the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
+# the RabbitMQ server configured and running.
+# echo the commands from the script so that we can watch the progress
+set echo True
+# set the on-line target to be the default from OTCmd2.ini
+sub get
+# set the on-line target for listening
+sub set ZeroMQ
+# start a listener thread running, subscribed to retval and timer topics
+sub run retval timer
+# load the python time module
+py import time
+# sleep for 15 seconds
+py time.sleep(15)
+# list all the charts the listener has heard of
+chart list
+# set the target chart to the last one weve seen
+chart set
+# show the target chart we have set
+chart get
+exit
