@@ -1,0 +1,39 @@
+# See the description in tests/features/OTCmd2-sub.txt
+# These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
+# the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
+# the RabbitMQ server configured and running.
+# echo the commands from the script so that we can watch the progress
+set echo True
+# set the on-line target to be the default from OTCmd2.ini
+sub get
+# set the on-line target
+sub set ZeroMQ
+# start a listener thread running, subscribed to retval and timer topics
+sub run retval timer
+# load the python time module
+py import time
+# sleep for 15 seconds
+py time.sleep(15)
+# list the message topics that are being hidden
+sub show
+# you should see some timer messages in JSON format
+py time.sleep(15)
+# stop seeing timer messages
+sub hide timer
+# now you should see no timer messages
+py time.sleep(15)
+# start seeing timer messages again
+sub show timer
+# now you should see timer messages
+py time.sleep(15)
+# show TOPIC messages with pretty-printing
+sub pprint
+# set pretty printing: with 0 - off, 1 - on
+sub pprint 0
+# show pretty printing current value with no argument
+sub pprint 1
+# info on the thread listening for messages.
+sub thread info
+# enumerate all threads
+sub thread enumerate
+exit
