@@ -10,7 +10,7 @@ Feature: Send messages to a OTMql4Zmq enabled Mt4 about the terminal.
   Scenario: OTCmd2-pub_wait.txt
 
     Given Create the OTCmd2 instance
-    Then  Collect share/examples to "OTCmd2-pub_wait.txt"
+    Then  Collect share/examples to "ZeroMQ-pub_wait.txt"
     Then  The "sub get" command will get the on-line targets from OTCmd2.ini
     
     Then  The "sub set ZeroMQ" command will set the on-line listener target
