@@ -56,18 +56,23 @@ We need to know where you have your metatrader installed.
 
 The calling of OTCmd2 may need to be customized for your setup.
 
-==== share/examples/test_rabbitmq_running.sh
+==== share/examples/test_mt4_zeromq_running.sh
 
-Test our communications with the RabbitMQ server.
-These tests will only work if you have pyrabbit installed:
-http://pypi.python.org/pypi/pyrabbit
-and have the 'rabbitmq_management' plugin to rabbitmq enabled.
-See the OS command 'rabbitmq-plugins list' and make sure
-the 'rabbitmq_management' and 'rabbitmq_web_dispatch' plugins are enabled.
+Test the communications with Mt4 via RabbitMQ;
+these tests NEED to have BOTH RabbitMQ and Mt4 running
+We need to know where you have your metatrader installed.
 
-You dont need to have a listener thread running.
+* [[ZeroMQ-sub.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/ZeroMQ-sub.txt]]
 
-* [[OTCmd2-rabbit.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-rabbit.txt]]
+* [[ZeroMQ-chart.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/ZeroMQ-chart.txt]]
+
+* [[ZeroMQ-ord.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/ZeroMQ-ord.txt]]
+
+* [[ZeroMQ-pub_wait-Accounts.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/ZeroMQ-pub_wait-Accounts.txt]]
+
+* [[ZeroMQ-pub_wait-jOT.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/ZeroMQ-pub_wait-jOT.txt]]
+
+* [[ZeroMQ-pub_wait.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/ZeroMQ-pub_wait.txt]]
 
 
 ==== share/examples/test_backtest.sh
@@ -79,25 +84,6 @@ You MUST have created a CSV file for the tests to work on.
 * [[OTCmd2-backtest_recipe.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_recipe.txt]]
 
 * [[OTCmd2-backtest_omlette.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_omlette.txt]]
-
-
-==== share/examples/test_mt4_rabbitmq_running.sh
-
-Test the communications with Mt4 via RabbitMQ;
-these tests NEED to have BOTH RabbitMQ and Mt4 running
-We need to know where you have your metatrader installed.
-
-* [[OTCmd2-sub.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-sub.txt]]
-
-* [[OTCmd2-chart.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-chart.txt]]
-
-* [[OTCmd2-ord.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-ord.txt]]
-
-* [[OTCmd2-pub_wait-Accounts.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-pub_wait-Accounts.txt]]
-
-* [[OTCmd2-pub_wait-jOT.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-pub_wait-jOT.txt]]
-
-* [[OTCmd2-pub_wait.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-pub_wait.txt]]
 
 
 ----
