@@ -1,3 +1,8 @@
+commit bfe3381f968abe69474e9791c29919bd8d466437
+Date:   Wed Aug 12 23:12:09 2015 +0300
+
+    Updated documentation for ZeroMQ in OpenTrader
+
 commit ac9b3c0e2833a9a019f66adfa826534b586f6323
 Date:   Wed Aug 12 21:33:30 2015 +0300
 
